@@ -259,3 +259,7 @@ plugin.py
     No longer distinguish URLError, HTTPError and socket errors. An
     error is now just a failure to translate.
     Updated version tag to 2.02-rc1
+
+plugin.py
+    Add code to ignore props with rtol text to My_setEvent() lookups as
+    well.
